[workspace]
resolver = "2"
members = [
  "packages/google-agones-crds",
  "packages/google-agones-sdk/bindings/rust",
  "packages/google-open-match-sdk/bindings/rust",
  "packages/shulker-addon-matchmaking",
  "packages/shulker-crds",
  "packages/shulker-kube-utils",
  "packages/shulker-operator",
  "packages/shulker-sdk/bindings/rust",
  "packages/shulker-utils",
]

[workspace.package]
version = "0.4.0"
authors = ["Jérémy Levilain <jeremy@jeremylvln.fr>"]
edition = "2021"
rust-version = "1.74.0"
publish = false

[workspace.dependencies]
# In workspace
google-agones-crds = { path = "./packages/google-agones-crds" }
google-agones-sdk = { path = "./packages/google-agones-sdk/bindings/rust" }
google-open-match-sdk = { path = "./packages/google-open-match-sdk/bindings/rust" }
shulker-crds = { path = "./packages/shulker-crds" }
shulker-kube-utils = { path = "./packages/shulker-kube-utils" }
shulker-sdk = { path = "./packages/shulker-sdk/bindings/rust" }
shulker-utils = { path = "./packages/shulker-utils" }

# External
anyhow = "1.0.75"
async-trait = "0.1.75"
axum = "0.7.2"
base64 = "0.21.5"
chrono = { version = "0.4.31", features = ["serde"] }
clap = { version = "4.4.11", features = ["derive", "env"] }
const_format = "0.2.32"
futures = "0.3.29"
futures-core = "0.3.29"
hostname = "0.3.1"
http = "0.2.11"
hyper = "0.14.28"
insta = { version = "1.34.0", features = ["yaml", "toml", "redactions"] }
k8s-openapi = { version = "0.20.0", features = ["latest", "schemars"] }
kube = { version = "0.87.1", features = ["runtime", "client", "derive" ] }
lazy_static = "1.4.0"
paste = "1.0.14"
pbjson-types = "0.6.0"
prometheus = "0.13.3"
prost = "0.12.3"
rand = "0.8.5"
reqwest = { version = "0.11.23", default-features = false, features = ["rustls-tls-native-roots"] }
schemars = { version = "0.8.16", features = ["chrono"] }
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
serde-xml-rs = "0.6.0"
serde_yaml = "0.9.28"
strum = { version = "0.25.0", features = ["derive"] }
tempfile = "3.8.1"
thiserror = "1.0.51"
tonic = { version = "0.10.2", features = ["gzip", "tls"] }
tokio = { version = "1.35.1", features = ["macros", "rt-multi-thread"] }
tokio-stream = "0.1.14"
tokio-util = "0.7.10"
toml = "0.8.8"
tower = "0.4.13"
tower-test = "0.4.0"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["json", "env-filter"] }
url = "2.5.0"
uuid = { version = "1.6.1", features = ["v4"] }
