[workspace]
resolver = "2"
members = [
  "packages/google-agones-crds",
  "packages/google-agones-sdk/bindings/rust",
  "packages/google-open-match-sdk/bindings/rust",
  "packages/shulker-addon-matchmaking",
  "packages/shulker-crds",
  "packages/shulker-kube-utils",
  "packages/shulker-operator",
  "packages/shulker-sdk/bindings/rust",
  "packages/shulker-utils",
]

[workspace.package]
version = "0.8.1"
authors = ["Jérémy Levilain <jeremy@jeremylvln.fr>"]
edition = "2021"
rust-version = "1.74.0"
publish = false

[workspace.dependencies]
# In workspace
google-agones-crds = { path = "./packages/google-agones-crds" }
google-agones-sdk = { path = "./packages/google-agones-sdk/bindings/rust" }
google-open-match-sdk = { path = "./packages/google-open-match-sdk/bindings/rust" }
shulker-crds = { path = "./packages/shulker-crds" }
shulker-kube-utils = { path = "./packages/shulker-kube-utils" }
shulker-sdk = { path = "./packages/shulker-sdk/bindings/rust" }
shulker-utils = { path = "./packages/shulker-utils" }

# External
anyhow = "1.0.81"
async-trait = "0.1.79"
axum = "0.7.5"
base64 = "0.22.0"
chrono = { version = "0.4.37", features = ["serde"] }
clap = { version = "4.5.4", features = ["derive", "env"] }
const_format = "0.2.32"
futures = "0.3.30"
futures-core = "0.3.30"
hostname = "0.4.0"
http = "0.2.12"
hyper = "0.14.28"
insta = { version = "1.38.0", features = ["yaml", "toml", "redactions"] }
k8s-openapi = { version = "0.21.1", features = ["latest", "schemars"] }
kube = { version = "0.88.1", features = ["runtime", "client", "derive" ] }
lazy_static = "1.4.0"
paste = "1.0.14"
pbjson-types = "0.6.0"
prometheus = "0.13.3"
prost = "0.12.3"
rand = "0.8.5"
reqwest = { version = "0.12.2", default-features = false, features = ["rustls-tls-native-roots"] }
schemars = { version = "0.8.16", features = ["chrono"] }
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.115"
serde-xml-rs = "0.6.0"
serde_yaml = "0.9.34"
strum = { version = "0.26.2", features = ["derive"] }
tempfile = "3.10.1"
thiserror = "1.0.58"
tonic = { version = "0.12.0", features = ["gzip", "tls"] }
tokio = { version = "1.37.0", features = ["macros", "rt-multi-thread"] }
tokio-stream = "0.1.15"
tokio-util = "0.7.10"
toml = "0.8.12"
tower = "0.4.13"
tower-test = "0.4.0"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["json", "env-filter"] }
url = "2.5.0"
uuid = { version = "1.8.0", features = ["v4"] }
