[workspace]
resolver = "2"
members = [
  "packages/google-agones-crds",
  "packages/google-agones-sdk/bindings/rust",
  "packages/google-open-match-sdk/bindings/rust",
  "packages/shulker-addon-matchmaking",
  "packages/shulker-cli",
  "packages/shulker-crds",
  "packages/shulker-kube-utils",
  "packages/shulker-operator",
  "packages/shulker-sdk/bindings/rust",
  "packages/shulker-utils",
]

[workspace.package]
version = "0.13.0"
authors = ["Jérémy Levilain <jeremy@jeremylvln.fr>"]
edition = "2021"
rust-version = "1.84.0"
publish = false

[workspace.dependencies]
# In workspace
google-agones-crds = { path = "./packages/google-agones-crds" }
google-agones-sdk = { path = "./packages/google-agones-sdk/bindings/rust" }
google-open-match-sdk = { path = "./packages/google-open-match-sdk/bindings/rust" }
shulker-crds = { path = "./packages/shulker-crds" }
shulker-kube-utils = { path = "./packages/shulker-kube-utils" }
shulker-sdk = { path = "./packages/shulker-sdk/bindings/rust" }
shulker-utils = { path = "./packages/shulker-utils" }

# External
anyhow = "1.0.86"
async-trait = "0.1.81"
axum = "0.8.0"
backon = "1.4.1"
base64 = "0.22.1"
chrono = { version = "0.4.38", features = ["serde"] }
clap = { version = "4.5.16", features = ["derive", "env"] }
const_format = "0.2.32"
futures = "0.3.30"
futures-core = "0.3.30"
hostname = "0.4.0"
http = "1.1.0"
hyper = "1.4.1"
insta = { version = "1.39.0", features = ["yaml", "toml", "redactions"] }
k8s-openapi = { version = "0.25.0", features = ["latest", "schemars"] }
kube = { version = "1.0.0", features = ["runtime", "client", "derive" ] }
lazy_static = "1.5.0"
paste = "1.0.15"
pbjson-types = "0.7.0"
prometheus = "0.14.0"
prost = "0.13.1"
rand = "0.9.0"
reqwest = { version = "0.12.7", default-features = false, features = ["rustls-tls-native-roots"] }
schemars = { version = "0.8.21", features = ["chrono"] }
serde = { version = "1.0.208", features = ["derive"] }
serde_json = "1.0.125"
serde-xml-rs = "0.8.0"
serde_yaml = "0.9.34"
strum = { version = "0.27.0", features = ["derive"] }
tempfile = "3.12.0"
thiserror = "2.0.11"
tonic = { version = "0.13.0", features = ["gzip", "tls"] }
tokio = { version = "1.39.3", features = ["macros", "rt-multi-thread"] }
tokio-stream = "0.1.15"
tokio-util = "0.7.11"
toml = "0.8.19"
tower = { version = "0.5.0", features = ["util"] }
tower-test = "0.4.0"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["json", "env-filter"] }
url = "2.5.2"
uuid = { version = "1.10.0", features = ["v4"] }

[workspace.lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(tarpaulin_include)'] }
