[package]
name = "shulker-crds"
edition = "2018"
version = "0.1.0"
authors = ["Jérémy Levilain <jeremy.levilain@epitech.eu>"]
license = "MIT"
readme = "../README.md"
keywords = []
repository = "https://github.com/IamBlueSlime/Shulker"
description = """
TODO
"""

[lib]
name = "shulker_crds"
path = "src/lib.rs"

[dependencies]
shulker-common = { path = "../shulker-common" }
kube = { version = "0.43.0", features = ["derive"] }
kube-runtime = "0.43.0"
k8s-openapi = { version = "0.9.0", default-features = false, features = ["v1_18"] }
serde = { version = "1.0.115", features = ["derive"] }
serde_json = "1.0.57"
chrono = "0.4"
merge = "0.1.0"
