[package]
name = "shulker-crds"
edition = "2018"
version = "0.1.0"
authors = ["Jérémy Levilain <jeremy.levilain@epitech.eu>"]
license = "MIT"
readme = "../README.md"
keywords = []
repository = "https://github.com/IamBlueSlime/Shulker"
description = """
TODO
"""

[lib]
name = "shulker_crds"
path = "src/lib.rs"

[dependencies]
shulker-common = { path = "../shulker-common" }
kube = { version = "0.48.0", features = ["derive"] }
kube-runtime = "0.48.0"
k8s-openapi = { version = "0.11.0", default-features = false, features = ["v1_17"] }
serde = { version = "1.0.123", features = ["derive"] }
serde_json = "1.0.61"
chrono = "0.4.19"
merge = "0.1.0"
schemars = { version = "0.8.3", features = ["chrono"] }
