[package]
name = "shulker-instance"
edition = "2018"
version = "0.1.0"
authors = ["Jérémy Levilain <jeremy.levilain@epitech.eu>"]
license = "MIT"
readme = "../README.md"
keywords = []
repository = "https://github.com/IamBlueSlime/Shulker"
description = """
TODO
"""

[lib]
name = "shulker_instance"
path = "src/lib.rs"

[dependencies]
shulker-crds = { path = "../shulker-crds" }
kube = "0.43.0"
kube-runtime = "0.43.0"
k8s-openapi = { version = "0.9.0", default-features = false, features = ["v1_18"] }
tracing = "0.1.19"
tracing-subscriber = "0.2.11"
tracing-futures = "0.2.4"
futures = "0.3.5"
serde = { version = "1.0.115", features = ["derive"] }
serde_json = "1.0.57"
snafu = "0.6.8"
