[package]
name = "shulker-instance"
edition = "2018"
version = "0.1.0"
authors = ["Jérémy Levilain <jeremy.levilain@epitech.eu>"]
license = "MIT"
readme = "../README.md"
keywords = []
repository = "https://github.com/IamBlueSlime/Shulker"
description = """
TODO
"""

[lib]
name = "shulker_instance"
path = "src/lib.rs"

[dependencies]
shulker-crds = { path = "../shulker-crds" }
shulker-resource = { path = "../shulker-resource" }
kube = "0.48.0"
kube-runtime = "0.48.0"
k8s-openapi = { version = "0.11.0", default-features = false, features = ["v1_17"] }
tracing = "0.1.22"
tracing-subscriber = "0.2.18"
tracing-futures = "0.2.4"
futures = "0.3.12"
serde = { version = "1.0.123", features = ["derive"] }
serde_json = "1.0.61"
snafu = "0.6.10"