[package]
name = "shulker-operator"
edition = "2018"
version = "0.1.0"
authors = ["Jérémy Levilain <jeremy.levilain@epitech.eu>"]
license = "MIT"
readme = "../README.md"
keywords = []
repository = "https://github.com/IamBlueSlime/Shulker"
description = """
TODO
"""

[[bin]]
doc = false
name = "operator"
path = "src/main.rs"

[dependencies]
shulker-common = { path = "../shulker-common" }
shulker-crds = { path = "../shulker-crds" }
shulker-instance = { path = "../shulker-instance" }
shulker-resource = { path = "../shulker-resource" }
kube = "0.48.0"
kube-runtime = "0.48.0"
k8s-openapi = { version = "0.11.0", default-features = false, features = ["v1_17"] }
tokio = { version = "1.1.1", features = ["full"] }
tracing = "0.1.22"
tracing-subscriber = "0.2.15"
tracing-futures = "0.2.4"
futures = "0.3.15"
serde = { version = "1.0.123", features = ["derive"] }
serde_json = "1.0.61"
snafu = "0.6.10"
chrono = "0.4.19"
merge = "0.1.0"
envconfig = "0.9.1"
