[package]
name = "shulker-resource"
edition = "2018"
version = "0.1.0"
authors = ["Jérémy Levilain <jeremy.levilain@epitech.eu>"]
license = "MIT"
readme = "../README.md"
keywords = []
repository = "https://github.com/IamBlueSlime/Shulker"
description = """
TODO
"""

[lib]
name = "shulker_resource"
path = "src/lib.rs"

[dependencies]
tracing = "0.1.22"
tracing-subscriber = "0.2.15"
tracing-futures = "0.2.5"
snafu = "0.6.10"
reqwest = "0.11.0"
futures = "0.3.12"
tokio = { version = "1.1.1", features = ["full"] }